fixed horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: relative;
+  z-index: -1;
 }
 
 /*NavBar Styles*/
@@ -11,7 +13,21 @@
   position: fixed;
 }
 
+.item-container {
+  width: 60vw;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*Homepage Styles*/
+#home-container {
+  width: 100%;
+  height: 100vh;
+}
+
 #particle-layer {
   z-index: -1;
   position: fixed;
